Fix #613